# project7

./: .gitignore  README.md
.github/workflows/: deploy.yaml  django_run_tests.yaml  lint.yaml  python_code_check.yaml
backend/: .gitignore  note.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
backend/src/: index.ts
backend/src/cron/: deleteExpiredMemos.ts
backend/src/db/: passkey.ts  schema.ts
backend/src/routes/: health.ts  memos.ts
backend/src/validators/: memo.ts
client/: package-lock.json  package.json
client/src/: README.md
client/src/app/: layout.tsx  page.tsx
client/src/app/memos/[memoId]/: page.tsx
docs/: architecture_diagram.drawio
openapi/: main.yaml
server/: .env.dev  .env.github-actions  Makefile  README.md  compose-dev.yaml  compose-ec2.yml  compose-prod.yml
server/django/: Dockerfile.dev  Dockerfile.ec2  Dockerfile.prod  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
server/django/config/: settings.py  storages_backends.py  urls.py
server/django/memos/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
server/django/memos/migrations/: 0001_initial.py  0002_remove_memo_qr_img.py
