[project]
name = "project7-django"
requires-python = ">= 3.11"

[tool.ruff]
line-length = 120
extend-exclude = ["**/migrations/*", "manage.py", "asgi.py", "wsgi.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "COM812", "ISC001"]

# とりあえず無効
extend-ignore = ["D", "ANN"]

[tool.ruff.lint.per-file-ignores]
# testではassertを使用してよい
"tests.py" = ["S101"]
